# Emergency_detection

./: README.md  package.xml  setup.cfg  setup.py
data/: emotion_cnn.pth
interior_monitoring/: emotion_detector.py
launch/: camera.launch.py
